# minimal-pairs

./: .gitignore  README.md  WARP.md  index.html  main.py  pyproject.toml  run.sh  server.py
css/: styles_override.css
docs/: index.html
docs/css/: styles.css
docs/js/: minimal_pairs.js  shutdown_handler.js
js/: minimal_pairs.js
minimal_pairs/: index.html  main.py
minimal_pairs/css/: styles.css  styles_override.css
minimal_pairs/js/: minimal_pairs.js  shutdown_handler.js
scripts/: sync_docs.py
