[tool.poetry]
name = "minimal-pairs"
version = "0.1.0"
description = "Japanese pitch accent minimal pairs perception test"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
