[tool.poetry]
name = 'minimal-pairs'
version = '0.1'
description = 'Japanese pitch accent minimal pairs perception test'
authors = ['-']
readme = 'README.md'
package-mode = false

[tool.poetry.dependencies]
python = '3.13.*'

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
