[tool.poetry]
name = 'minimal-pairs'
version = '0.1'
description = 'Japanese pitch accent minimal pairs perception test'
authors = ['-']
readme = 'README.md'
packages = [{ include = 'minimal_pairs' }]

[tool.poetry.scripts]
kmpt = 'minimal_pairs.main:main'

[tool.poetry.dependencies]
python = '3.13.*'
fastapi = "^0.118.0"
uvicorn = "^0.37.0"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'
